// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with status error 1`] = `
.c0 {
  margin: 0;
  padding: 18px 30px 19px;
  box-shadow: inset 0 0 0 1px #dbdee1;
}

.c1 {
  font-size: 15px;
  line-height: 24px;
}

.c2 {
  margin-top: 10px;
}

.c3 {
  color: rgba(0,0,0,0.4);
  font-size: 13px;
  line-height: 18px;
}

<figure
  class="c0"
>
  <figcaption
    class="c1"
  >
    Table widget caption
  </figcaption>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      При загрузке данных произошла ошибка
    </div>
  </div>
</figure>
`;

exports[`with status loading 1`] = `
.c0 {
  margin: 0;
  padding: 18px 30px 19px;
  box-shadow: inset 0 0 0 1px #dbdee1;
}

.c1 {
  font-size: 15px;
  line-height: 24px;
}

.c2 {
  margin-top: 10px;
}

.c3 {
  position: relative;
  height: 32px;
}

<figure
  class="c0"
>
  <figcaption
    class="c1"
  >
    Table widget caption
  </figcaption>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="spin2 spin2_size_xs spin2_view_default spin2_tone_default spin2_position_center spin2_progress_yes"
        data-lego="react"
      />
    </div>
  </div>
</figure>
`;

exports[`with status success 1`] = `
.c10 {
  white-space: nowrap;
}

.c0 {
  margin: 0;
  padding: 18px 30px 19px;
  box-shadow: inset 0 0 0 1px #dbdee1;
}

.c1 {
  font-size: 15px;
  line-height: 24px;
}

.c2 {
  margin-top: 10px;
}

.c3 {
  border-collapse: collapse;
  table-layout: fixed;
  width: 100%;
  margin-top: -1px;
  font-size: 13px;
}

.c4 {
  width: 10%;
}

.c5 {
  width: 60%;
}

.c9 {
  padding: 0;
  font-size: 13px;
  font-weight: normal;
  line-height: 24px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  text-align: left;
}

.c9:last-child {
  text-align: right;
}

.c11:nth-child(1) .c8 {
  padding-top: 3px;
}

.c12 {
  border-bottom: 1px solid #dbdee1;
}

.c12 td {
  padding: 3px 0 0;
}

.c12 + .c6 .c8 {
  padding-top: 3px;
}

.c7 {
  border-bottom: 1px solid #dbdee1;
}

.c7:nth-child(1) .c8 {
  padding-top: 3px;
}

.c7:nth-child(1) .c8 {
  padding-top: 0;
  padding-bottom: 3px;
}

<figure
  class="c0"
>
  <figcaption
    class="c1"
  >
    Table widget caption
  </figcaption>
  <div
    class="c2"
  >
    <table
      class="c3"
    >
      <colgroup>
        <col
          class="c4"
          width="10%"
        />
        <col
          class="c5"
          width="60%"
        />
        <col
          class=""
        />
      </colgroup>
      <thead>
        <tr
          class="c6 c7"
        >
          <th
            class="c8 c9"
          />
          <th
            class="c8 c9"
          >
            Все 5 размещений
          </th>
          <th
            class="c8 c9"
          >
            <span
              class="c10"
            >
              261
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="c6 c11"
        >
          <td
            class="c8 c9"
          >
            1
          </td>
          <td
            class="c8 c9"
          >
            Очень длинное название, которое точно не влезет в одну строку, но которое попадет в таблицу 1
          </td>
          <td
            class="c8 c9"
          >
            <span
              class="c10"
            >
              182
            </span>
          </td>
        </tr>
        <tr
          class="c6 c11"
        >
          <td
            class="c8 c9"
          >
            2
          </td>
          <td
            class="c8 c9"
          >
            Название, которое попадет в таблицу 2
          </td>
          <td
            class="c8 c9"
          >
            <span
              class="c10"
            >
              182
            </span>
          </td>
        </tr>
        <tr
          class="c12"
        >
          <td />
          <td />
          <td />
        </tr>
        <tr
          class="c6 c11"
        >
          <td
            class="c8 c9"
          >
            4
          </td>
          <td
            class="c8 c9"
          >
            Название, которое попадет в таблицу 4
          </td>
          <td
            class="c8 c9"
          >
            <span
              class="c10"
            >
              182
            </span>
          </td>
        </tr>
        <tr
          class="c6 c11"
        >
          <td
            class="c8 c9"
          >
            5
          </td>
          <td
            class="c8 c9"
          >
            Название, которое попадет в таблицу 5
          </td>
          <td
            class="c8 c9"
          >
            <span
              class="c10"
            >
              182
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;
